# node-flatbuffers-addon

./: .gitignore  .npmignore  CMakeLists.txt  README.md  binding.gyp  index.js  package-lock.json  package.json
benchmark/: benchmark-UTF8ArrayToString.js  benchmark-implementations.js  benchmark-is-typedarray.js  benchmark-lengthBytesUTF8.js  benchmark-stringToUTF8Array.js
lib/: flatbuffers_addon.js  flatbuffers_addon_asmjs.js  flatbuffers_addon_asmjs.js.mem  flatbuffers_addon_wasm.js  flatbuffers_addon_wasm.wasm
patches/: diff-match-patch.js  emscripten-optimze-nodejs-env.patch  fix-numeric_limits-to-avoid-conflict-with-windows.h-header.patch  flatbuffers-1.10.x-add_buffer_parsing.patch  flatbuffers-1.11.x-add_buffer_parsing.patch  flatbuffers-1.12.x-add_buffer_parsing.patch  flatbuffers-1.9.x-add_buffer_parsing.patch
prebuilds/linux-x64/: node.napi.node
prebuilds/win32-x64/: node.napi.node
scripts/: build.js  check-prebuilds.js  clean.js  download-prerequisites.js  embind.bat  embind.js  embind.sh  install.js
src/: allocator.h  embind.cpp  index.cpp  runtime_optimizer.js
tests/: common.js  flattbuffers-test.js  generate-js-test.js  switch-to-embind.js
tests/fbs/: monsterdata_test.json  unicode_test.json
